# Dump-Alert

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  data.py  main.py  manage.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
dump_alert/: asgi.py  settings.py  urls.py  wsgi.py
reports/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
reports/management/commands/: recluster_reports.py  seed_cluster_test.py
reports/migrations/: 0001_initial.py  0002_reportcluster_report_cluster.py  0003_recluster_existing_reports.py  0004_alter_report_danger_level_alter_report_location_and_more.py  0005_remove_reportcluster_max_danger_level_and_more.py  0006_rename_column_danger_level_to_type.py  0007_rename_max_waste_type_to_waste_type.py
reports/static/reports/js/: leaflet_geocoder.js
reports/templates/registration/: login.html
reports/templates/reports/: report_form.html  report_list.html  report_success.html
